crates/nuzo-class-macros/tests/ui/constructor_bad_return.stderr
error: #[constructor] must return `Self`
 --> tests/ui/constructor_bad_return.rs:6:5
  |
6 |     #[constructor]
  |     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)
